Fixed that the notification bell was not visible with notifications left

--- a/Assets/css/theme/dark-blue.css
+++ b/Assets/css/theme/dark-blue.css
@@ -229,3 +229,7 @@ span.task-date-overdue {
   color: rgb(200,50,50);
   font-weight: bold;
 }
+
+a i.web-notification-icon {
+    color: var(--alert-color-error);
+}
